fix: hide scrollbar

--- a/src/global.css
+++ b/src/global.css
@@ -4,19 +4,19 @@
 @custom-variant dark (&:is(.dark *));
 
 html,
-body,
-#app {
+body {
     height: 100%;
     width: 100%;
 }
 
-body {
-    font-family: 'Inter', sans-serif;
-}
-
 #app {
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
+    position: fixed;
+    inset: 0;
+    font-family: 'Inter', sans-serif;
 }
 
 :root {
